# matrix-c

./: .gitignore  CMakeLists.txt  font_atlas_maker.py
.github/workflows/: clean-up.yml  cmake-multi-platform.yml
assets/: apps_message.txt  help_message.txt
assets/fonts/: matrix_font.raw
assets/fonts/include/: matrix_font_info.h
assets/shaders/: matrix.glsl  matrix_rain.shader
assets/shaders/fragment/: basic_texture_fragment_shader.frag  blur_fragment_shader.frag  ghosting_fragment_shader.frag
assets/shaders/vertex/: basic_texture_vertex_shader.vert  cursor_motion.vert
include/: apps.h  clock.h  events.h  fonts.h  gl_errors.h  glad.h  help_message.h  helper.h  options.h  renderer.h  shader.h  x11.h
include/apps/: debug.h  matrix.h  triangle.h
src/: apps.cpp  clock.cpp  events.cpp  fonts.cpp  gl_errors.cpp  glad.c  helper.cpp  main.cpp  options.cpp  renderer.cpp  shader.cpp  x11.cpp
src/apps/: debug.cpp  matrix.cpp  triangle.cpp
